Fixed overflow-y on objectives

--- a/projects/bingo_gen/bingo_gen.css
+++ b/projects/bingo_gen/bingo_gen.css
@@ -113,7 +113,7 @@ aside {
     top: 10%;
 }
 
-main, footer {
+main ul, footer {
     height: 200px;
 
     overflow-y: scroll;
